--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,14 +1,14 @@
   <div id="add-form-container" class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">Advertise the vacancy by filling out the form</h1>
+        <h1 class="text-center">Advertise the job by filling out the form</h1>
       </div>
       <div id="form-box" class="col-md-12">
         <h2>Fill in the data as best you can to find your developer faster!</h2>
         <form action="">
           <div class="form-group">
             <label for="title">Job Title:</label>
-            <input type="text" class="form-control" id="title" name="title" placeholder="Digite o título da vaga" required>
+            <input type="text" class="form-control" id="title" name="title" placeholder="Enter the job title" required>
             <small id="titleHelp" class="form-text text-muted">The title is very important, be clear and objective.</small>
           </div>
           <div class="form-group">
